# tlennis-no-teams

./: Cargo.toml  league_data.txt  tlennis_data.txt
gendata/: general.txt  names.txt  surnames.txt
src/: game_data.rs  main.rs  match_data.rs  player_data.rs  set_data.rs  tlennis_data.rs  vectors.rs
